# fpas

./: Cargo.toml  README.md
.github/workflows/: CD.yml
src/: cli.rs  lib.rs  main.rs  output.rs
src/gen_pass/: mod.rs  process.rs
tests/: cli_tests.rs  gen_pass_tests.rs  hash_tests.rs
